assets/stylesheets/directoryopus.scss
.menu-panel ul.menu-links li .link-opus-link {
	padding-left: 2em;
	background-image: url('/plugins/discourse-directoryopus/images/opus_icon.png');
	background-size: 1.25em;
	background-repeat: no-repeat;
	background-position: 0.5em center;
}

.directoryopus-link-status .directoryopus-link-userpage-pro, .names span.directoryopus-link-poster-pro {
	&, a {
		color: #daa520;
		i.fa, svg.fa {
			font-size: 1.1em;
			color: #daa520;
			margin: 0;
		}
	}
}

.directoryopus-link-status .directoryopus-link-userpage-light, .names span.directoryopus-link-poster-light {
	&, a {
		color: #20bfda;
		i.fa, svg.fa {
			font-size: 1.1em;
			color: #20bfda;
			margin: 0;
		}
	}
}

.directoryopus-link-status .directoryopus-link-userpage-pleaselink, .names span.directoryopus-link-poster-pleaselink {
	&, a {
		color: #a21930;
		i.fa, svg.fa {
			font-size: 1.1em;
			color: #a21930;
			margin: 0;
		}
	}
}

.directoryopus-nowrap {
	white-space: nowrap;
}

.directoryopus-link-status {
	margin-top: 1px;
	display: inline-block;
	.opus-nav-pills {
		margin-top: 5px;
		margin-bottom: 5px;
		> a {
			text-decoration: none !important;
			white-space: nowrap;
			border: none;
			padding: 5px 12px 5px 10px;
			color: $primary;
			background: dark-light-diff($primary, $secondary, 90%, -65%);
			font-size: 1.143em;
			line-height: 20px;
			transition: background .15s;
			&:hover {
				color: $quaternary;
				background-color: dark-light-diff($quaternary, $secondary, 70%, -70%);
			}
		}

		&.active > a, > a.active {
			color: $secondary;
			background-color: $quaternary;
		}

		.fa {
			margin-right: 5px;
		}

		.link-opus-button-icon {
			width: 1.25em;
			height: 1.25em;
			padding-right:  0.25em;
			vertical-align: top;
		}

		i, svg { color: $primary; }
		a:hover i { color: $quaternary; }
		a.active i { color: $secondary; }
	}
}

.directoryopus-link-body {
	/* Bits of this copied from Discourse's body-page class.
	   Aiming for a consistent look with e.g. the FAQs page while
	   keeping our stylesheet isolated/independent to avoid surprises. */
	padding-left: 20px;
	padding-right: 20px;
	blockquote, h1, h2, h3, hr, p, pre, ul, ol, table {
		margin: 0 0 20px;
		font-size: 1.143em;
		line-height: 22px;
	}
	li {
		margin-bottom: 8px;
	}
	h1 {
		color: $tertiary;
		margin: 1.5em 0 1em;
		font-size: 1.5em;
		display: flex;
		align-items: center;
		.directoryopus-logo {
			float: left;
			width: 1.75em;
			height: 1.75em;
			padding-bottom: 0.3em;
			padding-right: 0.17em;
		}
	}
	h2 {
		color: $tertiary;
		margin: 1.5em 0 1em;
	}
	ul {
		margin: 0 0 0 1.5em;
		> li button {
			padding: 6px 10px;
		}
	}
	.btn:not(.btn-small) {
		padding: 6px 10px 6px 7px;
		&[disabled], &.disabled {
			opacity: initial;
			background: #016090;
			color: white;
		}
		.fa.fa-fw {
			margin: initial;
		}
	}
	.directoryopus-inlineblock {
		display: inline-block;
	}
	.directoryopus-link-noaccount {
		background-color: rgba($quaternary, 0.17);
		margin: 0 -1em 0 -1em;
		padding: 1em 1.5em 1em 1em;
		display: inline-block;
		> h2:first-of-type {
			margin-top: 0;
		}
		> ul:last-of-type > li:last-of-type {
			margin-bottom: 0;
		}
	}
	.directoryopus-link-getback {
		.link-opus-link {
			color: $tertiary;
			white-space: nowrap;
			padding-left: 1.35em;
			background-image: url('/plugins/discourse-directoryopus/images/opus_icon.png');
			background-size: 1.1em;
			background-repeat: no-repeat;
			background-position: 0.1em center;
		}
		.link-opus-menu-shot {
			vertical-align: top;
		}
	}
	.directoryopus-link-loading {
		background-color: $tertiary;
		padding: 0.5em;
		text-align: center;
		color: $secondary;
	}
	.directoryopus-link-loaderror {
		background-color: rgba($quaternary, 0.17);
		padding: 0.5em;
		display: flex;
		.directoryopus-link-errorheading {
			color: $tertiary;
			font-weight: bold;
			margin-right: 0.25em;
		}
	}
	.directoryopus-link-statrefdiv {
		display: inline-block;
		.directoryopus-link-butref {
			display: flex;
		}
	}
	.directoryopus-link-refresh {
		float: left;
		margin-top: 5px;
	}
	.directoryopus-link-lastrefresh {
		text-align: right;
		font-size: 0.9em;
		font-style: italic;
		margin: 0 0 0 auto;
	}
	.directoryopus-link-linkheading {
		.directoryopus-link-linkstatus {
			font-weight: bold;
			font-size: 1.025em;
			color: #ffffff;
		}
	}
	.directoryopus-link-versionsummary {
		.directoryopus-link-program {
			margin-left: 1px;
			font-weight: bold;
			font-size: 1.125em;
			color: #ffffff;
			text-shadow: 0px 1px 3px #052c73;
		}
		.directoryopus-link-version {
			margin: 0px 0.1em;
			font-weight: bold;
			font-size: 1.125em;
			color: #ffffff;
			text-shadow: 0px 1px 3px #052c73;
		}
		.directoryopus-link-edition {
			font-weight: bold;
			font-size: 1.125em;
			color: #ffffff;
			text-shadow: 0px 1px 3px #052c73;
		}
		.directoryopus-link-edition-pro {
			font-weight: bold;
			font-size: 1.125em;
			color: #f5ce6d;
			text-shadow: 0px 1px 2px #231a05;
		}
		.directoryopus-link-edition-light {
		    margin-right: 1px;
			font-weight: bold;
			font-size: 1.125em;
			color: #ffffff;
			text-shadow: 0px 1px 3px #c394bf;
		}
	}
	.directoryopus-link-linkmain {
		padding: 0;
		margin: 0;
	}
	.directoryopus-link-linkdetails {
		display: flex;
		padding-top: 0.75em;
		margin-top: 0.75em;
		border-top: 1px solid #b3e57f;
		font-size: 0.9em;
		.directoryopus-link-detailheading {
			font-style: italic;
		}
		.directoryopus-link-detailvalue {
			text-shadow: 0px 1px 1px #052c73;
		}
		.directoryopus-link-detailregcode {
			float: left;
			padding-right: 1.5em;
		}
		.directoryopus-link-detailregdate {
			margin-left: auto;
		}
	}
	.directoryopus-link-linked {
		border: 1px solid #6faf96;
		padding: 1em;
		margin-bottom: 0;
		background-color: #34cc00;
		color: #ffffff;
	}
	.directoryopus-link-unlinked {
		border: 1px solid $quaternary;
		display: inline-block;
		padding: 1em;
	}
	.directoryopus-link-form {
		border: 1px solid $tertiary;
		display: inline-block;
		padding: 1em;
		font-size: 1.143em;
	}
	.directoryopus-link-inputs {
		margin-bottom: 0.5em;
		input {
			margin-top: 2px;
			margin-bottom: 2px;
			width: 275px;
		}
	}
	.directoryopus-link-instructions {
		font-size: 0.9em;
		line-height: initial;
		ol {
			margin: 1.25em 2.25em;
			font-size: 1em;
			line-height: initial;
		}
		video {
			border: 1px solid black;
			margin: 0 0 0.75em 1.25em;
		}
	}
	button.btn {
		vertical-align: middle;
		white-space: nowrap;
	}
	input, button {
		font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	}
	label {
		font-size: 0.929em;
		font-weight: normal;
	}
	label {
		color: $tertiary;
		font-weight: bold;
		display: inline;
	}
	label.directoryopus-link-showme {
		margin: 0.5em;
		font-size: 1em;
		vertical-align: middle;
		font-weight: initial;
		line-height: initial;
	}
	.directoryopus-link-admin {
		border: 2px solid red;
		background-color: rgba(255, 0, 0, 0.05);
		color: black;
		padding: 1em;
		margin: 1em;
		display: inline-block;
		float: right;
		width: 25%;
		p, li {
			margin: 0;
		}
		ol {
			margin: 0.5em 0.5em 0.5em 1.5em;
		}
		.directoryopus-link-linkid {
			font-size: 0.8em;
		}
	}
}

